*** 20000607_1 by lusky
updated docs with new list subscription instructions


*** 20000606_3 by lusky
fix logging of bad NICKs from servers


*** 20000606_2 by lusky
check for bogus NICK from peer server in m_nick
minor fix for some notices in m_stats and m_oper (mh)


*** 20000606_1 by lusky
typo in m_message causing infinite loop


*** 20000525_1 by lusky
revved patchlevel to b127
added logging to ts_warn()
log prefix of NICKs without TS


*** 20000516_3 by lusky
fixed a strncpy() (db)


*** 20000516_2 by lusky
reworked vsendto_one() again (pa)
another fix to the llist fix (db)


*** 20000516_1 by lusky
revved patchlevel to b126
missing va_start/end in send.c (db)
additional llist logging (db)


*** 20000514_1 by lusky
workaround in client.c for major bug causing llist corruption and server coring
vsendto_one cleanup in send.c


*** 20000423_1 by lusky
revved patchlevel to b125
fixed to s_conf for DEBUG mode (db)
config.h comments for CUSTOM_ERR updated (db)
syncd config.h.dist to config.h


*** 20000421_1 by lusky
cleanup prototypes in s_bsd.h
max recipients for privmsg & notice is now configurable at compiletime (perly)
clean up some char vs u_char issues in res.c


*** 20000419_1 by lusky
fixed channel unavailable error (db)


*** 20000410_3 by lusky
revved patchlevel to b124
fixed stats K for username@* klines


*** 20000410_2 by lusky
revved patchlevel to b123
moved NICKNAMEHISTORYLENGTH to near top of config.h


*** 20000410_1 by lusky
chan mode +p/+s fix (ejb)
use MAX_SETBACK_TIME for threshold of clock jump--now 1800secs (db)
unneeded va_end() broke compile on some OSes (db)


*** 20000402_1 by lusky
fixed bug that caused only the first connection in a class to be tried
  i.e. if you had several C: lines in one =class= only the first
  C: line was ever used. This is code that was #ifdef'd out from original
  hybrid-5 (db)
revved patchlevel to b122


*** 20000206_1 by lusky
fixed spaces in src/Makefile.in (db)


*** 20000201_1 by lusky