@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_die.c,v 1.1 1999/07/30 04:01:32 tomh Exp $
+ *   $Id: m_die.c,v 1.2 1999/08/01 07:50:42 tomh Exp $
  */
 #include "m_commands.h"
 #include "client.h"
@@ -104,7 +104,7 @@ int m_die(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 
   if (!IsOperDie(sptr))
     {
-      sendto_one(sptr,":%s NOTICE %s: You have no D flag", me.name, parv[0]);
+      sendto_one(sptr,":%s NOTICE %s :You have no D flag", me.name, parv[0]);
       return 0;
     }
 
