@@ -1,3 +1,8 @@
+*** 20000608_1 by lusky
+revved patchlevel to b128
+misc server notice fixes (gp)
+
+
 *** 20000607_1 by lusky
 updated docs with new list subscription instructions
 
